Fix minimap labels on IE9

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -745,6 +745,7 @@ nav.secondary {
         font-size: 16px;
         text-stroke: 2px #fff;
         background: rgba(255,255,255,.9);
+        z-index: 2; // For IE9
         input[type="radio"] {
           display: none;
         }
